--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mujtama'una---مجتمعنا",
+  "name": "مجتمعنا---mujtama'una",
   "private": true,
   "version": "0.0.0",
   "type": "module",
